# kore-base

./: .gitignore  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
src/: error.rs  lib.rs
src/crypto/: ed25519.rs  mod.rs  secp256k1.rs
src/identifier/: derive.rs  digest.rs  key.rs  mod.rs  signature.rs
