[package]
name = "kore-base"
version = "0.1.0"
authors = ["Antonio Estevez <aestgar62@gmail.com>"]
edition = "2021"
description = "Base library for kore netowork"

[dependencies]
ed25519-dalek = { version = "2.0", optional = true, default-features =  false}
memsecurity = { version = "3.2", features = ["encryption"] }
k256 = { version = "0.13", optional = true }
thiserror = "1.0.30"
zeroize = "1.6"

[features]
default = ["ed25519", "secp256k1"]
ed25519 = ["ed25519-dalek", "ed25519-dalek/zeroize"]
secp256k1 = ["k256"]