[package]
name = "kore-base"
version = "0.1.0"
authors = ["Antonio Estevez <aestgar62@gmail.com>"]
edition = "2021"
description = "Base library for kore netowork"

[dependencies]
base64 = "0.21"
blake3 = { version = "1.5", optional = true }
borsh = "1.0"
ed25519-dalek = { version = "2.0", optional = true, default-features =  false}
memsecurity = { version = "3.2", default-features = false, features = ["encryption"] }
k256 = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
thiserror = "1.0.30"
zeroize = "1.6"

[dev-dependencies]
serde_json = "1.0"

[features]
default = [
	"ed25519",
	"secp256k1", 
	"blake3",
	"sha2",
	"sha3",
]
all = ["default", "secp256k1", "sha2", "sha3"]
ed25519 = ["ed25519-dalek", "ed25519-dalek/zeroize"]
secp256k1 = ["k256"]